Adding pre-sorting

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
-<html class="no-js" lang="en">
+<html lang="en">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>D3 Family Tree</title>
 
 		<link href="css/index.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
-		<script src="bundle.js"></script>
-
 	</head>
 	<body>
 		<h1>Wastvedt Family Tree</h1>
+
+		<div class="buttons">
+			<button id="button-playPause">Pause</button>
+		</div>
+
+		<script src="js/dist/bundle.js"></script>
 	</body>
 </html>
