--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
@@ -6,6 +6,9 @@
 		<title>D3 Family Tree</title>
 
 		<link href="css/index.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		
+		<!--live-reload-->
+		<script src="//localhost:9092"></script>
 	</head>
 	<body>
 		<h1>Wastvedt Family Tree</h1>
