--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
 		<link href="css/index.css" media="screen, projection" rel="stylesheet" type="text/css" />
 		
 		<!--live-reload-->
-		<script src="//localhost:9092"></script>
+		<script src="localhost:9093"></script>
 	</head>
 	<body>
 		<h1>Wastvedt Family Tree</h1>
@@ -17,6 +17,6 @@
 			<button id="button-playPause">Pause</button>
 		</div>
 
-		<script src="js/dist/bundle.js"></script>
+		<script src="js/bundle.js"></script>
 	</body>
 </html>
