--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,9 +6,9 @@
 		<title>D3 Family Tree</title>
 
 		<link href="css/index.css" media="screen, projection" rel="stylesheet" type="text/css" />
-		
+
 		<!--live-reload-->
-		<script src="localhost:9093"></script>
+		<script src="http://localhost:9093"></script>
 	</head>
 	<body>
 		<h1>Wastvedt Family Tree</h1>
