Fix imports, add dataPath.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,10 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>D3 Family Tree</title>
 
-		<link href="css/index.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
-		<!--live-reload-->
-		<script src="http://localhost:9093"></script>
+		<link href="../scss/index.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<h1>Wastvedt Family Tree</h1>
@@ -17,6 +14,6 @@
 			<button id="button-playPause">Pause</button>
 		</div>
 
-		<script src="js/bundle.js"></script>
+		<script src="../ts/app.ts"></script>
 	</body>
 </html>
