Fix sass, remove scripts.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>D3 Family Tree</title>
 
-		<link href="../scss/index.css" media="screen, projection" rel="stylesheet" type="text/css" />
+		<link href="../scss/index.scss" media="screen, projection" rel="stylesheet" type="text/css" />
 	</head>
 	<body>
 		<h1>Wastvedt Family Tree</h1>
