--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,18 +1,21 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>D3 Family Tree</title>
 
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>D3 Family Tree</title>
+    <link
+      href="../scss/index.scss"
+      media="screen, projection"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
 
-	<link href="../scss/index.scss" media="screen, projection" rel="stylesheet" type="text/css" />
-</head>
+  <body>
+    <h1>Wastvedt Family Tree</h1>
 
-<body>
-	<h1>Wastvedt Family Tree</h1>
-
-	<script src="../ts/app.ts"></script>
-</body>
-
+    <script src="../ts/app.ts"></script>
+  </body>
 </html>
