--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,17 @@
     <svg>
       <defs>
         <filter id="dropShadow" x="-30%" y="-30%" width="160%" height="160%">
-          <feGaussianBlur
+          <feColorMatrix
+            type="matrix"
             in="SourceAlpha"
+            values="1 0 0 0 0 
+                                               0 1 0 0 0 
+                                               0 0 1 0 0 
+                                               0 0 0 100 0"
+            result="boostedInput"
+          />
+          <feGaussianBlur
+            in="boostedInput"
             stdDeviation="1"
             result="blur"
           ></feGaussianBlur>
@@ -31,7 +40,7 @@
             <feMergeNode in="SourceGraphic" />
           </feMerge>
         </filter>
-        <linearGradient id="linearGradient" x1="0%" y1="0%" x2="0%" y2="100%">
+        <linearGradient id="linearGradient" x1="0%" y1="0%" x2="100%" y2="0%">
           <stop offset="0" stop-color="black"></stop>
           <stop offset="1" stop-color="white"></stop>
         </linearGradient>
