--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,16 @@
   <body>
     <h1>Baby Skill Tree</h1>
 
-    <svg>
+    <svg class="container">
       <defs>
         <filter id="dropShadow" x="-30%" y="-30%" width="160%" height="160%">
           <feColorMatrix
             type="matrix"
             in="SourceAlpha"
             values="1 0 0 0 0 
-                                               0 1 0 0 0 
-                                               0 0 1 0 0 
-                                               0 0 0 100 0"
+                    0 1 0 0 0 
+                    0 0 1 0 0 
+                    0 0 0 100 0"
             result="boostedInput"
           />
           <feGaussianBlur
@@ -41,8 +41,8 @@
           </feMerge>
         </filter>
         <linearGradient id="linearGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-          <stop offset="0" stop-color="black"></stop>
-          <stop offset="1" stop-color="white"></stop>
+          <stop offset="0" class="gradientStart"></stop>
+          <stop offset="1" class="gradientEnd"></stop>
         </linearGradient>
         <mask id="linearMask" maskContentUnits="objectBoundingBox">
           <rect x="0" y="0" width="1" height="1" fill="url(#linearGradient)" />
